FINALLY fixing the jumpy header thing; had to specify some magic heights, which I don't love, but it works

--- a/site/css/wea.css
+++ b/site/css/wea.css
@@ -179,7 +179,7 @@ height:100%;
 }
 
 .JS header.open > #nav_main{
-    margin-top:.65rem;
+    margin-top: 1rem;
 }
 
 
@@ -191,6 +191,12 @@ height:100%;
 }
 .nav_option {
     display: none;
+}
+
+
+#nav_main > div#nav_search{
+    margin-top: .1rem;
+    padding: 0;
 }
 
 .nav_option > div{
